--- a/angular-web-app/src/app/components/_layout/footer/footer.component.html
+++ b/angular-web-app/src/app/components/_layout/footer/footer.component.html
@@ -2,99 +2,74 @@
 <footer id="site-footer">
   <div class="px-3 dark-light">
     <div class="theme-container">
-      <div class="row">
 
-        <div class="col-lg-4 col-md-12 col-sm-12">
-          <mat-card class="my-3 mat-elevation-z0 dark-light">
+      <div class="row pt-3">
+        <div class="col-lg-8 col-md-8 col-sm-12">
+          <mat-card class="mat-elevation-z0 dark-light">
             <mat-card-header>
               <mat-card-title class="title-underlined">About us.</mat-card-title>
             </mat-card-header>
             <mat-card-content>
-              <div class="container-fluid">
-                <div class="row">
-                  <div class="col-md-12 d-flex align-items-center">
-                    <div class="py-2">
-                      <p>
-                        Duis semper mauris vitae purus rhoncus suscipit. Nunc dictum dapibus tellus, at viverra risus
-                        pharetra id. Nulla facilisi. Ut mollis et augue non gravida. Sed ipsum urna, venenatis ut
-                        vehicula nec, ultrices quis sapien.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
+              <p class="p-icon p-3">
+                <mat-icon>maps</mat-icon>
+                <span class="mx-2">Kropswolde, Groningen</span>
+              </p>
+              <p class="p-3">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis perferendis rem,
+                aut aliquam neque nam? dolor sit amet, consectetur adipisicing elit consectetur
+                adipisicing elit. Officiis perferendis rem, aut aliquam.
+              </p>
             </mat-card-content>
           </mat-card>
         </div>
 
-        <div class="col-lg-4 col-md-6 col-sm-12">
-          <mat-card class="my-3 mat-elevation-z0 dark-light">
+        <div class="col-lg-4 col-md-4 col-sm-12">
+          <mat-card class="mat-elevation-z0 dark-light">
             <mat-card-header>
               <mat-card-title class="title-underlined">Contact us.</mat-card-title>
             </mat-card-header>
             <mat-card-content>
-              <div class="container-fluid">
-                <div class="row">
-                  <div class="col-md-12 d-flex align-items-center">
-                    <div class="py-2">
-                      <mat-list>
-                        <mat-list-item class="dark-light">
-                          <mat-icon mat-list-icon>maps</mat-icon>
-                          <div mat-line>Location</div>
-                          <div mat-line>Kropswolde, Groningen</div>
-                        </mat-list-item>
-                        <mat-list-item class="dark-light">
-                          <mat-icon mat-list-icon>email</mat-icon>
-                          <div mat-line>Email</div>
-                          <div mat-line>mail@domain.com</div>
-                        </mat-list-item>
-                        <mat-list-item class="dark-light">
-                          <mat-icon mat-list-icon>phone</mat-icon>
-                          <div mat-line>Phone</div>
-                          <div mat-line>06 12345678</div>
-                        </mat-list-item>
-                      </mat-list>
-                    </div>
-                  </div>
-                </div>
-              </div>
+              <mat-list>
+                <mat-list-item class="dark-light">
+                  <mat-icon mat-list-icon>maps</mat-icon>
+                  <div mat-line>Address</div>
+                  <div mat-line>Kropswolde, Groningen</div>
+                </mat-list-item>
+                <mat-list-item class="dark-light">
+                  <mat-icon mat-list-icon>email</mat-icon>
+                  <div mat-line>Email</div>
+                  <div mat-line>mail@domain.com</div>
+                </mat-list-item>
+                <mat-list-item class="dark-light">
+                  <mat-icon mat-list-icon>phone</mat-icon>
+                  <div mat-line>Phone</div>
+                  <div mat-line>06 12345678</div>
+                </mat-list-item>
+              </mat-list>
             </mat-card-content>
           </mat-card>
         </div>
 
-        <div class="col-lg-4 col-md-6 col-sm-12">
-          <mat-card class="my-3 mat-elevation-z0 dark-light">
+        <div class="col-12">
+          <mat-card class="mat-elevation-z0 dark-light">
             <mat-card-header>
               <mat-card-title class="title-underlined">Follow us.</mat-card-title>
             </mat-card-header>
             <mat-card-content>
-              <div class="container-fluid">
-                <div class="row">
-                  <div class="col-md-12 d-flex align-items-center">
-                    <div class="py-2 full-width">
-                      <mat-list>
-                        <mat-list-item class="dark-light">
-                          <!-- facebook, twitter, instagram -->
-                          <a class="footer-social-icon"><i class="fab fa-facebook-f fa-lg fa-2x"></i></a>
-                          <a class="footer-social-icon"><i class="fab fa-twitter fa-lg fa-2x"></i></a>
-                          <a class="footer-social-icon"><i class="fab fa-instagram fa-lg fa-2x"></i></a>
-                        </mat-list-item>
-                        <mat-list-item class="dark-light">
-                          <!-- linkedin, g+, pin -->
-                          <a class="footer-social-icon"><i class="fab fa-linkedin-in fa-lg fa-2x"></i></a>
-                          <a class="footer-social-icon"><i class="fab fa-google-plus-g fa-lg fa-2x"></i></a>
-                          <a class="footer-social-icon"><i class="fab fa-pinterest fa-lg fa-2x"></i></a>
-                        </mat-list-item>
-                      </mat-list>
-                    </div>
-                  </div>
-                </div>
+              <div class="p-3 d-flex justify-content-between">
+                <!-- facebook, twitter, instagram -->
+                <a><i class="fab fa-facebook-f fa-lg fa-2x"></i></a>
+                <a><i class="fab fa-twitter fa-lg fa-2x"></i></a>
+                <a><i class="fab fa-instagram fa-lg fa-2x"></i></a>
+                <!-- linkedin, g+, pin -->
+                <a><i class="fab fa-linkedin-in fa-lg fa-2x"></i></a>
+                <a><i class="fab fa-google-plus-g fa-lg fa-2x"></i></a>
+                <a><i class="fab fa-pinterest fa-lg fa-2x"></i></a>
               </div>
             </mat-card-content>
           </mat-card>
         </div>
       </div>
-
     </div>
   </div>
 
