--- a/angular-web-app/src/app/components/maps/maps.component.html
+++ b/angular-web-app/src/app/components/maps/maps.component.html
@@ -6,8 +6,8 @@
   <mat-card-content>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-8 d-flex align-items-center mat-elevation-z4">
-          <div class="map-container mb-4">
+        <div class="col-md-8 px-0">
+          <div class="map-container">
             <iframe
               src="https://maps.google.com/maps?q=Oeverlanden+60,+9606+RR+Kropswolde&t=&z=13&ie=UTF8&iwloc=&output=embed"
               style="border:0"
@@ -17,8 +17,8 @@
         </div>
 
         <div class="col-md-4 d-flex align-items-center">
-          <div class="py-2">
             <mat-list>
+              <div mat-subheader>Netherlands</div>
               <mat-list-item>
                 <mat-icon mat-list-icon class="txt-primary">place</mat-icon>
                 <div mat-line>Oeverlanden 60</div>
@@ -32,7 +32,6 @@
                 <div mat-line>Kropswolde</div>
               </mat-list-item>
             </mat-list>
-          </div>
         </div>
 
       </div>
