--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -72,6 +72,14 @@ hr.divider {
   width: 100%;
 }
 
+.p-icon {
+  flex-direction: row;
+  box-sizing: border-box;
+  display: flex;
+  place-content: center flex-start;
+  align-items: center;
+}
+
 /*************************************/
 /**          Color Helpers          **/
 /*************************************/
