Updated components to cards

--- a/angular-web-app/src/app/components/maps/maps.component.html
+++ b/angular-web-app/src/app/components/maps/maps.component.html
@@ -1,8 +1,5 @@
-
-<mat-card class="mt-3">
-  <mat-card-header class="flex-center">
-    <mat-card-title class="text-uppercase">Location</mat-card-title>
-  </mat-card-header>
+<!-- Card-->
+<mat-card class="mt-3 p-0">
   <mat-card-content>
     <div class="container-fluid">
       <div class="row">
