--- a/angular-web-app/src/variables.scss
+++ b/angular-web-app/src/variables.scss
@@ -10,3 +10,4 @@ $color-light-alt: #F9F9F9;
 $color-primary-txt: #212121;
 $color-secondary-txt: #4f4f4f;
 $color-mat-dark: #424242;
+$color-mat-dark-bg: #303030;
