--- a/angular-web-app/src/app/components/featured/featured.component.html
+++ b/angular-web-app/src/app/components/featured/featured.component.html
@@ -1,21 +1,43 @@
-<section class="page-section" id="featured">
-  <div class="container">
-    <h2 class="text-center mt-0">Featured</h2>
-    <hr class="divider my-4"/>
-    <div class="row mt-5">
-      <div class="col-lg-8 col-md-6">
-        <div class="view mat-elevation-z4">
-          <img src="https://mdbootstrap.com/img/Photos/Others/img%20(29).jpg" class="img-fluid" alt="smaple image">
+<!-- Card-->
+<mat-card class="mt-3 p-0" id="featured-painting">
+  <mat-card-content>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-8 col-md-6 col-sm-12 px-0 mat-elevation-z12">
+          <div class="vh-60">
+            <img src="{{painting.thumbnail}}" class="img-fluid featured-img" alt="{{painting.title}}">
+          </div>
+
         </div>
-      </div>
-      <div class="col-lg-4 col-md-6 d-flex align-items-center">
-        <div>
-          <i class="fas fa-4x fa-laptop-code txt-primary mb-4"></i>
-          <h3 class="h4 mb-2">Up to Date</h3>
-          <mat-divider class="my-2"></mat-divider>
-          <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+
+        <div class="col-lg-4 col-md-6 col-sm-12 d-flex align-items-center">
+          <div>
+            <h2 class="title-underlined">{{painting.title}}</h2>
+            <h6 class="text-icon font-italic mb-3">
+              <mat-icon class="mr-2">palette</mat-icon>
+              <span>By Rolien Schrik.</span>
+            </h6>
+
+            <div class="badge primary-light mr-2">
+              <div class="text-icon">
+                <mat-icon class="icon-size-16">brush</mat-icon>
+                <span class="mx-2 font-size-16">{{painting.paint}}</span>
+              </div>
+            </div>
+            <div class="badge primary-light mr-2">
+              <div class="text-icon">
+                <mat-icon class="icon-size-16">category</mat-icon>
+                <span class="mx-2 font-size-16">{{painting.category}}</span>
+              </div>
+            </div>
+
+
+            <p>{{painting.description}}</p>
+
+            <button mat-flat-button color="accent">Details</button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </mat-card-content>
+</mat-card>
