--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -59,25 +59,38 @@ hr.divider {
   font-size: 40px;
 }
 
-.title-underlined::after {
-  content: "";
-  display: block;
-  height: 0.2rem;
-  width: 3.25rem;
-  background-color: $color-accent;
-  margin: 1rem 0;
+.title-underlined {
+  &::after {
+    content: "";
+    display: block;
+    height: 0.2rem;
+    width: 3.25rem;
+    background-color: $color-accent;
+    margin: 1rem 0;
+  }
 }
 
-.full-width {
-  width: 100%;
-}
-
-.p-icon {
+.text-icon {
   flex-direction: row;
   box-sizing: border-box;
   display: flex;
   place-content: center flex-start;
   align-items: center;
+}
+
+.font-size-16 {
+  font-size: 16px;
+}
+.icon-size-16 {
+  font-size: 16px !important;
+  height: 16px !important;
+  width: 16px !important;
+}
+.font-size-20 {
+  font-size: 20px;
+}
+.font-size-24 {
+  font-size: 24px;
 }
 
 /*************************************/
