--- a/angular-web-app/src/app/components/featured/featured.component.html
+++ b/angular-web-app/src/app/components/featured/featured.component.html
@@ -3,7 +3,7 @@
   <mat-card-content>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-8 col-md-6 col-sm-12 px-0 mat-elevation-z12">
+        <div class="col-lg-8 col-md-6 col-sm-12 px-0 mat-elevation-z6">
           <div class="vh-60">
             <img src="{{painting.thumbnail}}" class="img-fluid featured-img" alt="{{painting.title}}">
           </div>
@@ -32,7 +32,7 @@
             </div>
 
 
-            <p>{{painting.description}}</p>
+            <p class="pt-2">{{painting.description}}</p>
 
             <button mat-flat-button color="accent">Details</button>
           </div>
