--- a/angular-web-app/src/app/components/service-card/service-card.component.html
+++ b/angular-web-app/src/app/components/service-card/service-card.component.html
@@ -1,8 +1,8 @@
 <!-- Card-->
-<mat-card class="mt-3">
-  <mat-card-header>
-    <mat-card-title class="title-underlined">{{service.title}}</mat-card-title>
-  </mat-card-header>
+<mat-card class="mt-3 py-4">
+<!--  <mat-card-header>-->
+<!--    <mat-card-title class="title-underlined">{{service.title}}</mat-card-title>-->
+<!--  </mat-card-header>-->
   <mat-card-content>
     <div class="text-center">
       <i class="fas fa-4x {{service.icon}} txt-primary mb-4"></i>
