--- a/angular-web-app/src/app/pages/home/home.component.html
+++ b/angular-web-app/src/app/pages/home/home.component.html
@@ -7,7 +7,7 @@
 
     <!-- Services -->
     <app-section-title-center [title]="'Services'"></app-section-title-center>
-    <div class="container-fluid">
+    <div class="container-fluid pb-3">
       <div class="row">
         <div *ngFor="let service of services" class="col-lg-4 col-md-6 col-sm-12">
           <!-- Service cards -->
@@ -18,7 +18,7 @@
 
     <!-- Featured -->
     <app-section-title-center [title]="'Featured'"></app-section-title-center>
-    <div class="container-fluid">
+    <div class="container-fluid pb-3">
       <div class="row">
         <div class="col-12">
           <app-featured [painting]="featuredPainting"></app-featured>
@@ -28,7 +28,7 @@
 
     <!-- Latest -->
     <app-section-title-center [title]="'Latest'"></app-section-title-center>
-    <div class="container-fluid">
+    <div class="container-fluid pb-3">
       <div class="row">
         <div class="col-12">
           <app-latest></app-latest>
