--- a/angular-web-app/src/app/components/_layout/footer/footer.component.html
+++ b/angular-web-app/src/app/components/_layout/footer/footer.component.html
@@ -1,79 +1,49 @@
 <!-- Footer-->
 <footer id="site-footer">
-  <div class="px-3 dark-light">
-    <div class="theme-container">
 
-      <div class="row pt-3">
-        <div class="col-lg-8 col-md-8 col-sm-12">
-          <mat-card class="mat-elevation-z0 dark-light">
-            <mat-card-header>
-              <mat-card-title class="title-underlined">About us.</mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-              <p class="p-3">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis perferendis rem,
-                aut aliquam neque nam? dolor sit amet, consectetur adipisicing elit consectetur
-                adipisicing elit. Officiis perferendis rem, aut aliquam.
-              </p>
-            </mat-card-content>
-          </mat-card>
+  <div class="py-5">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-lg-4">
+          <h4 class="title-underlined">About.</h4>
+          <p class="pb-3">
+            Lorem ipsum dolor sit amet consectetur adip elit. Maiores deleniti explicabo voluptatem
+            quisquam nulla asperiores aspernatur aperiam voluptate et consectetur minima delectus.
+          </p>
         </div>
 
-        <div class="col-lg-4 col-md-4 col-sm-12">
-          <mat-card class="mat-elevation-z0 dark-light">
-            <mat-card-header>
-              <mat-card-title class="title-underlined">Contact us.</mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-              <mat-list>
-                <mat-list-item class="dark-light">
-                  <mat-icon mat-list-icon>maps</mat-icon>
-                  <div mat-line>Address</div>
-                  <div mat-line>Kropswolde, Groningen</div>
-                </mat-list-item>
-                <mat-list-item class="dark-light">
-                  <mat-icon mat-list-icon>email</mat-icon>
-                  <div mat-line>Email</div>
-                  <div mat-line>mail@domain.com</div>
-                </mat-list-item>
-                <mat-list-item class="dark-light">
-                  <mat-icon mat-list-icon>phone</mat-icon>
-                  <div mat-line>Phone</div>
-                  <div mat-line>06 12345678</div>
-                </mat-list-item>
-              </mat-list>
-            </mat-card-content>
-          </mat-card>
+        <div class="col-lg-4">
+          <h4 class="title-underlined">Stay updated.</h4>
+          <p class="pb-3">Follow me on social media to stay updated.</p>
+          <ul class="list-inline">
+            <!-- facebook, twitter, instagram -->
+            <li class="list-inline-item"><a><i class="fab fa-facebook-f fa-lg mr-5"></i></a></li>
+            <li class="list-inline-item"><a><i class="fab fa-twitter fa-lg mr-5"></i></a></li>
+            <li class="list-inline-item"><a><i class="fab fa-instagram fa-lg mr-5"></i></a></li>
+          </ul>
         </div>
 
-        <div class="col-12">
-          <mat-card class="mat-elevation-z0 dark-light">
-            <mat-card-header>
-              <mat-card-title class="title-underlined">Follow us.</mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-              <div class="p-3 d-flex justify-content-between">
-                <!-- facebook, twitter, instagram -->
-                <a><i class="fab fa-facebook-f fa-lg fa-2x"></i></a>
-                <a><i class="fab fa-twitter fa-lg fa-2x"></i></a>
-                <a><i class="fab fa-instagram fa-lg fa-2x"></i></a>
-                <!-- linkedin, g+, pin -->
-                <a><i class="fab fa-linkedin-in fa-lg fa-2x"></i></a>
-                <a><i class="fab fa-google-plus-g fa-lg fa-2x"></i></a>
-                <a><i class="fab fa-pinterest fa-lg fa-2x"></i></a>
-              </div>
-            </mat-card-content>
-          </mat-card>
+        <div class="col-lg-4">
+          <h4 class="title-underlined">Quick links.</h4>
+          <p>Navigate to the page you are looking for.</p>
+          <ul class="list-unstyled">
+            <!-- facebook, twitter, instagram -->
+            <li class="mt-2"><a><i class="fas fa-share"></i> Home</a></li>
+            <li class="mt-2"><a><i class="fas fa-share"></i> Portfolio</a></li>
+            <li class="mt-2"><a><i class="fas fa-share"></i> Contact</a></li>
+          </ul>
         </div>
+
       </div>
     </div>
   </div>
 
   <!-- Copyright -->
-  <div class="px-3 dark-light-alt">
-    <div class="theme-container">
+  <div class="py-3">
+    <div class="container">
       <div class="row flex-center">
-        <div class="text-center py-3">© 2020 Spavento Paintings.</div>
+        <div class="text-center">© 2020 Spavento Paintings.</div>
       </div>
     </div>
   </div>
