--- a/angular-web-app/src/app/components/_layout/nav/nav.component.scss
+++ b/angular-web-app/src/app/components/_layout/nav/nav.component.scss
@@ -12,7 +12,7 @@
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
-  color: $color-secondary-txt;
+  color: $color-txt-black-muted;
   font-weight: 700;
   font-size: 1rem;
   padding: 0.75rem 0;
