--- a/angular-web-app/src/app/components/call-to-action/call-to-action.component.html
+++ b/angular-web-app/src/app/components/call-to-action/call-to-action.component.html
@@ -1,10 +1,6 @@
 <!-- Call to action -->
-<section class="page-section primary-light">
-  <div class="container text-center">
-    <h2 class="mb-4">Call To Action</h2>
-    <button mat-flat-button>Basic</button>
-    <button mat-flat-button color="primary">Primary</button>
-    <button mat-flat-button color="accent">Accent</button>
-    <button mat-flat-button color="warn">Warn</button>
-  </div>
-</section>
+<div class="text-center">
+  <p class="subtitle txt-accent text-uppercase">Some very cool one liner</p>
+  <h2 class="mb-5">Check out all my cool stuff</h2>
+  <button mat-raised-button color="accent">Take me there!</button>
+</div>
