--- a/angular-web-app/src/app/components/gallery/gallery.component.scss
+++ b/angular-web-app/src/app/components/gallery/gallery.component.scss
@@ -13,7 +13,7 @@
   display: block;
   height: 30vh;
   width: 100%;
-  background-color: $color-dark-alt;
+  background-color: $color-darker;
 }
 
 .portfolio-box-img {
