--- a/angular-web-app/src/variables.scss
+++ b/angular-web-app/src/variables.scss
@@ -1,13 +1,18 @@
-$color-primary: #607D8B;
-$color-primary-light: #CFD8DC;
-$color-primary-dark: #455A64;
-$color-accent: #FF9800;
-$color-warn: #FF5722;
+$color-primary: #2196F3;
+$color-primary-light: #BBDEFB;
+$color-primary-dark: #1976D2;
+
+$color-accent: #607D8B;
+$color-warn: #F44336;
+
 $color-dark: #272727;
-$color-dark-alt: #222;
-$color-light: #F8F9FA;
-$color-light-alt: #F9F9F9;
-$color-primary-txt: #212121;
-$color-secondary-txt: #4f4f4f;
-$color-mat-dark: #424242;
-$color-mat-dark-bg: #303030;
+$color-darker: #222;
+
+$color-light: #FFF;
+$color-light-alt: #F8F9FA;
+
+$color-txt-black: rgba(#000, 0.87);
+$color-txt-black-muted: rgba(#000, 0.54);
+$color-txt-white: #fff;
+$color-txt-white-muted: rgba(#fff, 0.7);
+
