--- a/angular-web-app/src/app/components/_layout/header/header.component.html
+++ b/angular-web-app/src/app/components/_layout/header/header.component.html
@@ -1,15 +1,11 @@
 <!-- Header-->
 <header class="masthead">
-  <div class="container h-100">
-    <div class="row h-100 align-items-center justify-content-center text-center">
-      <div class="col-lg-10 align-self-end">
-        <h1 class="text-uppercase font-weight-bold txt-primary-light">
-          Spavento <span class="txt-primary">Paintings</span>
-        </h1>
-        <hr class="divider my-4"/>
-        <button mat-mini-fab color="primary">
-          <i class="fas fa-chevron-down"></i>
-        </button>
+  <div class="container-fluid h-100">
+    <div class="row h-100 align-items-center">
+      <div class="col-lg-6 text-white header-content">
+        <p class="text-uppercase">Paintings by</p>
+        <h1 class="font-weight-bold mb-5">Spavento</h1>
+        <button mat-flat-button color="primary">Start exploring<i class="fa fa-angle-right ml-2"></i></button>
       </div>
     </div>
   </div>
