--- a/angular-web-app/src/app/components/_layout/header/header.component.scss
+++ b/angular-web-app/src/app/components/_layout/header/header.component.scss
@@ -5,14 +5,18 @@ header.masthead {
   padding-top: 10rem;
   padding-bottom: 2rem;
   background:
-    //linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%),
-    linear-gradient(to bottom, rgba($color-primary-light, 0.2) 0%, rgba($color-dark-alt, 0.5) 100%),
-    url("https://scontent-ams4-1.xx.fbcdn.net/v/t1.0-9/115932795_1173222826364715_1101636021482293624_o.jpg?_nc_cat=110&_nc_sid=8bfeb9&_nc_ohc=5Je9T9TO_VYAX91ueZ4&_nc_ht=scontent-ams4-1.xx&oh=b533045c0da5d4518f1c0b98367b47a2&oe=5F3D83E3") no-repeat scroll center;
+    linear-gradient(to bottom, rgba(black, 0.9) 0%, rgba(black, 0.5) 100%),
+    url("https://scontent-amt2-1.xx.fbcdn.net/v/t1.0-9/107081307_1161994194154245_6097520492808434412_n.jpg?_nc_cat=111&_nc_sid=8bfeb9&_nc_ohc=cpta0uNYQSEAX9Tkjn3&_nc_ht=scontent-amt2-1.xx&oh=04ce395df46fa2d4886f45779e1197f1&oe=5F3B6AC9") no-repeat scroll 50%;
   background-size: cover;
 }
 
 header.masthead h1 {
-  font-size: 2.25rem;
+  font-size: 3.5rem;
+}
+
+.header-content {
+  margin-left: 30px;
+  margin-top: -30px;
 }
 
 @media (min-width: 992px) {
