--- a/angular-web-app/src/app/components/_layout/nav/nav.component.html
+++ b/angular-web-app/src/app/components/_layout/nav/nav.component.html
@@ -1,6 +1,6 @@
 <!-- Navigation-->
 <nav class="navbar navbar-expand-md fixed-top py-3" id="mainNav">
-  <div class="container">
+  <div class="container-fluid">
     <a class="navbar-brand" routerLink="/home" routerLinkActive="router-link-active">Spavento</a>
     <button class="navbar-toggler navbar-toggler-right" type="button"
             data-toggle="collapse" data-target="#navbarResponsive"
