--- a/angular-web-app/src/app/components/latest/latest.component.scss
+++ b/angular-web-app/src/app/components/latest/latest.component.scss
@@ -31,7 +31,7 @@
 .ngu-points  li {
   display: inline-block;
   border-radius: 50%;
-  background: $color-dark-alt;
+  background: $color-dark;
   padding: 5px;
   margin: 0 4px;
   transition-timing-function: cubic-bezier(.17,.67,.83,.67);
