--- a/angular-web-app/src/app/components/service-card/service-card.component.html
+++ b/angular-web-app/src/app/components/service-card/service-card.component.html
@@ -1,5 +1,5 @@
 <!-- Card-->
-<mat-card class="mt-3 py-4">
+<mat-card class="py-4">
 <!--  <mat-card-header>-->
 <!--    <mat-card-title class="title-underlined">{{service.title}}</mat-card-title>-->
 <!--  </mat-card-header>-->
