--- a/angular-web-app/src/app/components/_layout/footer/footer.component.html
+++ b/angular-web-app/src/app/components/_layout/footer/footer.component.html
@@ -1,19 +1,19 @@
 <!-- Footer-->
 <footer id="site-footer">
 
-  <div class="py-5">
+  <div class="pt-5">
     <div class="container">
       <div class="row">
 
-        <div class="col-lg-4">
+        <div class="col-lg-4 pb-4">
           <h4 class="title-underlined">About.</h4>
-          <p class="pb-3">
+          <p>
             Lorem ipsum dolor sit amet consectetur adip elit. Maiores deleniti explicabo voluptatem
             quisquam nulla asperiores aspernatur aperiam voluptate et consectetur minima delectus.
           </p>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-lg-4 pb-4">
           <h4 class="title-underlined">Stay updated.</h4>
           <p class="pb-3">Follow me on social media to stay updated.</p>
           <ul class="list-inline">
@@ -24,7 +24,7 @@
           </ul>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-lg-4 pb-4">
           <h4 class="title-underlined">Quick links.</h4>
           <p>Navigate to the page you are looking for.</p>
           <ul class="list-unstyled">
@@ -42,6 +42,7 @@
   <!-- Copyright -->
   <div class="py-3">
     <div class="container">
+      <hr>
       <div class="row flex-center">
         <div class="text-center">© 2020 Spavento Paintings.</div>
       </div>
