--- a/angular-web-app/src/app/components/_layout/header/header.component.html
+++ b/angular-web-app/src/app/components/_layout/header/header.component.html
@@ -1,8 +1,8 @@
 <!-- Header-->
 <header class="masthead">
-  <div class="container-fluid h-100">
+  <div class="container h-100">
     <div class="row h-100 align-items-center">
-      <div class="col-lg-6 text-white header-content">
+      <div class="col-lg-6 text-white">
         <p class="text-uppercase">Paintings by</p>
         <h1 class="font-weight-bold mb-5">Spavento</h1>
         <button mat-flat-button color="primary">Start exploring<i class="fa fa-angle-right ml-2"></i></button>
