--- a/angular-web-app/src/app/components/contact-card/contact-card.component.html
+++ b/angular-web-app/src/app/components/contact-card/contact-card.component.html
@@ -1,8 +1,5 @@
 <!-- Card-->
-<mat-card class="mt-3">
-  <mat-card-header>
-    <mat-card-title class="title-underlined">Contact us.</mat-card-title>
-  </mat-card-header>
+<mat-card>
   <mat-card-content>
     <mat-list>
       <mat-list-item>
