--- a/angular-web-app/src/app/pages/about/about.component.html
+++ b/angular-web-app/src/app/pages/about/about.component.html
@@ -1,9 +1,22 @@
 <!-- Header small -->
 <app-header-small [title]="title" [subTitle]="subTitle"></app-header-small>
 
-<!-- Cards wrapper -->
-<div class="px-3">
-  <!-- Content -->
+<!-- Main -->
+<main class="main main-raised">
 
-</div>
+  <!-- Content -->
+  <section class="page-section bg-light">
+    <div class="container">
+      <app-section-title
+        [title]="'Some title'"
+        [subTitle]="'What i have to offer'"
+        [text]="'Phasellus ultricies, nisi vitae rutrum hendrerit, justo nunc faucibus libero, vel suscipit nibh erat id arcu. Cras ac vehicula diam.'"
+      ></app-section-title>
+      <div class="row">
+
+      </div>
+    </div>
+  </section>
+
+</main>
 
