--- a/angular-web-app/src/app/pages/home/home.component.html
+++ b/angular-web-app/src/app/pages/home/home.component.html
@@ -54,7 +54,9 @@
   <!-- CTA -->
   <section class="page-section">
     <div class="container">
-      <app-call-to-action></app-call-to-action>
+      <div class="col-12">
+        <app-call-to-action></app-call-to-action>
+      </div>
     </div>
   </section>
 
