--- a/angular-web-app/src/app/components/service-card/service-card.component.html
+++ b/angular-web-app/src/app/components/service-card/service-card.component.html
@@ -1,8 +1,5 @@
 <!-- Card-->
-<mat-card class="py-4">
-<!--  <mat-card-header>-->
-<!--    <mat-card-title class="title-underlined">{{service.title}}</mat-card-title>-->
-<!--  </mat-card-header>-->
+<mat-card class="py-4 mb-4">
   <mat-card-content>
     <div class="text-center">
       <i class="fas fa-4x {{service.icon}} txt-primary mb-4"></i>
