--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -36,11 +36,6 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: inherit;
 }
 
-.over-header {
-  margin-top: -5rem;
-  z-index: 99;
-}
-
 .flex-center {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -57,7 +52,7 @@ h1, h2, h3, h4, h5, h6 {
 hr.divider {
   max-width: 3.25rem;
   border-width: 0.2rem;
-  border-color: $color-accent;
+  border-color: $color-primary;
 }
 
 .view {
@@ -77,7 +72,7 @@ hr.divider {
     display: block;
     height: 0.2rem;
     width: 3.25rem;
-    background-color: $color-accent;
+    background-color: $color-primary;
     margin: 1rem 0;
   }
 }
@@ -109,6 +104,10 @@ hr.divider {
   margin-bottom: 0;
   letter-spacing: .2em;
   font-weight: 700;
+}
+
+.p15 {
+  padding: 15px !important;
 }
 
 /*************************************/
