--- a/angular-web-app/src/app/components/_layout/nav/nav.component.scss
+++ b/angular-web-app/src/app/components/_layout/nav/nav.component.scss
@@ -3,27 +3,139 @@
 #mainNav {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   background-color: $color-light;
-  transition: background-color 0.2s ease;
+  transition: background-color 0.2s ease, color 0.2s ease;
 }
 
-#mainNav .navbar-brand {
+.navbar-brand {
   font-weight: 700;
-  color: $color-dark;
+  color: $color-txt-black;
 }
 
-#mainNav .navbar-nav .nav-item .nav-link {
-  color: $color-txt-black-muted;
+.navbar-toggler {
+  padding: 0 !important;
+}
+
+.nav-link {
+  color: $color-txt-black;
   font-weight: 700;
   font-size: 1rem;
-  padding: 0.75rem 0;
+  padding: 1.2rem 0 !important;
+  text-decoration: none;
+  display: inline-block;
+  position: relative;
+  opacity: 0.8;
 }
 
-#mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
-  color: $color-accent;
+.nav-link:hover {
+  opacity: 1;
 }
 
-#mainNav .navbar-nav .nav-item .nav-link.active {
-  color: $color-accent !important;
+.nav-link::before {
+  transition: 300ms;
+  height: 0.2rem;
+  content: "";
+  position: absolute;
+  background-color: $color-primary;
+}
+
+.nav-link-fade-up::before {
+  width: 100%;
+  bottom: 0.2rem;
+  opacity: 0;
+}
+
+.nav-link-fade-up:hover::before {
+  bottom: 1rem;
+  opacity: 1;
+}
+
+.router-link-active::before {
+  bottom: 1rem;
+  opacity: 1;
+}
+
+/* Burger menu */
+
+.animated-icon {
+  width: 30px;
+  height: 23px;
+  position: relative;
+  margin: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+
+.animated-icon span {
+  display: block;
+  position: absolute;
+  background: $color-dark;
+  height: 3px;
+  width: 100%;
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+.animated-icon span:nth-child(1) {
+  top: 0;
+  -webkit-transform-origin: left center;
+  -moz-transform-origin: left center;
+  -o-transform-origin: left center;
+  transform-origin: left center;
+}
+
+.animated-icon span:nth-child(2) {
+  top: 10px;
+  -webkit-transform-origin: left center;
+  -moz-transform-origin: left center;
+  -o-transform-origin: left center;
+  transform-origin: left center;
+}
+
+.animated-icon span:nth-child(3) {
+  top: 20px;
+  -webkit-transform-origin: left center;
+  -moz-transform-origin: left center;
+  -o-transform-origin: left center;
+  transform-origin: left center;
+}
+
+.animated-icon.open span:nth-child(1) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  top: 0;
+  left: 8px;
+}
+
+.animated-icon.open span:nth-child(2) {
+  width: 0;
+  opacity: 0;
+}
+
+.animated-icon.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  top: 21px;
+  left: 8px;
 }
 
 @media (min-width: 768px) {
@@ -32,35 +144,25 @@
     background-color: transparent;
   }
   #mainNav .navbar-brand {
-    color: rgba($color-light, 0.8);
-  }
-  #mainNav .navbar-brand:hover {
-    color: $color-light;
+    color: $color-txt-white;
   }
   #mainNav .navbar-nav .nav-item .nav-link {
-    color: rgba($color-light, 0.8);
-    padding: 0 1rem;
-  }
-  #mainNav .navbar-nav .nav-item .nav-link:hover {
-    color: $color-light;
+    color: $color-txt-white;
+    margin: 0 1rem !important;
   }
   #mainNav .navbar-nav .nav-item:last-child .nav-link {
-    padding-right: 0;
+    padding-right: 0 !important;
+    margin-right: 0 !important;
   }
+
   #mainNav.navbar-scrolled {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
     background-color: $color-light;
   }
   #mainNav.navbar-scrolled .navbar-brand {
-    color: $color-dark;
-  }
-  #mainNav.navbar-scrolled .navbar-brand:hover {
-    color: $color-accent;
+    color: $color-txt-black;
   }
   #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link {
-    color: $color-dark;
-  }
-  #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link:hover {
-    color: $color-accent;
+    color: $color-txt-black;
   }
 }
