--- a/angular-web-app/src/variables.scss
+++ b/angular-web-app/src/variables.scss
@@ -8,7 +8,7 @@ $color-warn: #F44336;
 $color-dark: #272727;
 $color-darker: #222;
 
-$color-light: #FFF;
+$color-light: white;
 $color-light-alt: #F8F9FA;
 
 $color-txt-black: rgba(#000, 0.87);
